fix profile picture when viewed on smaller screen, CSS

--- a/main.css
+++ b/main.css
@@ -54,13 +54,15 @@ body {
 
 }
 #profile {
-	border-radius: 10px;
 	margin: 0 auto;
 	opacity: .85;
+	overflow: hidden;
+
 }
  #profilePic {
  	width: 100px;
- 	border-radius: 10px;
+ 	height: 100px;
+ 	border-radius: 30%;
  	/*max-width: 256px;*/
  	/*height: 100%;*/
  }
@@ -246,11 +248,18 @@ footer p {
 		display: flex;
 		align-items: center;
 	}
-	#objective p {
+	#message {
 		margin: 0 auto;
+		width: 70%;
 	}	
 	#profilePic {
 		width: 150px;
+		height: 150px;
+	}
+	#profile {
+		width: 30%;
+		border-radius: 50%;
+		overflow: hidden;
 	}
 }
 @media only screen and (max-width: 330px){
